--- a/src/Pages/CekIDBI/Add/InputCekIdBi.module.css
+++ b/src/Pages/CekIDBI/Add/InputCekIdBi.module.css
@@ -13,11 +13,6 @@
     gap: 15px;
 }
 
-.wrapDataPengaju {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-}
 
 .inputWrap{
     display: flex;
@@ -81,6 +76,7 @@
     text-align: center;
     transition: all .35s;
 }
+
 .tab-content {
     max-height: 0;
     padding: 0 1em;
@@ -90,9 +86,7 @@
 }
 
 .accordionCheck {
-    position: absolute;
-    opacity: 0;
-    z-index: -1;
+    display: none;
 }
 
 input:checked + .tab-label {
@@ -101,12 +95,6 @@ input:checked + .tab-label {
 
 input:checked + .tab-label::after{
     transform: rotate(90deg);
-}
-
-input:checked ~ .tab-content {
-    /* max-height: 100%; */
-    /* height: fit-content; */
-    /* padding: 1em; */
 }
 
 /* Chrome, Safari, Edge, Opera */
